--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>kanban</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kanban</name>
-	<description>kanban tool</description>
+	<description>kanban_tool</description>
 
 	<properties>
 		<java.version>1.8</java.version>
